sidekiq implementation and code refactor

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to I18n.t("web.dublin_bikes"), dublin_bikes_url %></li>
         <li><%= link_to I18n.t("web.dublin_bus"), dublin_bus_url %></li>
+        <li><%= link_to I18n.t("web.pokemons"), pokemons_path  %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <%= display_image %>
