--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid text-center align-div">
   <p class="pokemon-header"><%= I18n.t('web.pokemons') %></p>
-  <%= link_to I18n.t("web.delete_all"), pokemons_destroy_path, class: "btn btn-danger delete-btn" , method: 'delete' %>
+  <%= delete_all_pokemons %>
   <%= form_tag({:action => :upload}, multipart: true, class: "upload-form") do %>
     <div>
       <%= file_field_tag :file, class: "file-optn" %>
