--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -297,3 +297,10 @@ body{
 #new_user .validation-error{
 	margin-top: -15px; 
 }
+
+#messages{
+	color: white;
+	margin-top: 80px;
+	font-size: 25px;
+}
+
